feat: add result engine, PDF generation, and system settings API
  Result engine
  - Compute session, routine, and annual results with GPA, grade, and rank (class, section, gender-section)
  - Fall back to gender-section for section rank when student has no section assigned
  - Merit list endpoint sorted by annual GPA/marks across filters
  - Per-subject and aggregate stats (pass/fail counts, pass rate, grade distribution) for session, routine, and annual scopes
  - Overview endpoints (/overview/routine, /overview/annual) returning per-subject grade distribution, absent count, and pass rate

  PDF generation (migrated from id_card_service)
  - ID card front/back PDF via Playwright — pulls institution name, address, and logo from SystemSettings; long text wraps without font-size changes
  - Admit card PDF (room-based and by-section flows) using direct service/repository injection instead of HTTP calls
  - Seat plan PDF generation

  System settings
  - GET/POST/PATCH /api/system-settings — manage institution name, address, and logo
  - POST initialises settings; PATCH updates individual fields; logo saved as raw bytes (no compression)
  - Old logo file deleted from disk on logo update

  Infrastructure
  - Dockerfile switched to eclipse-temurin:21-jdk-jammy with Playwright Chromium system dependencies
  - docker-compose updated with Playwright browser volume, image storage volume, and restart policy
  - Added Playwright and metadata-extractor dependencies to pom.xml